rename & overflow fix

--- a/mycssjs/css/slider.css
+++ b/mycssjs/css/slider.css
@@ -5,6 +5,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
+            overflow: hidden;
             /* border: 2px yellow solid; */
         }
 
@@ -14,7 +15,7 @@
             display: flex;
             align-items: center;
             width: 1560px;
-            /* border: 2px rgb(69, 227, 69) solid; */
+            border: 2px rgb(69, 227, 69) solid;
             /* overflow: hidden; */
             /* padding-left: 500px; */
             /* width: 100%; */
@@ -38,6 +39,7 @@
             min-width: 500px;
             height: 300px;
             position: relative;
+            overflow: hidden;
             /* border: 2px rgb(118, 12, 167) solid; */
             /* left: -1040px; */
         }
